Anonymous | Login | 2021-01-15 21:15 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0028488 | Community | [OCCT] OCCT:VIS | public | 2017-02-23 21:49 | 2019-03-05 13:46 | ||||
Reporter | jensgw | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.1.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0028488: VIS - fix compilation with VTK 8.2 | ||||||||
Description | The VIS is a nice feature briding two awesome libraries. However, in the current OCCT release VIS depends on VTK 6.1 which is rather old by now. Especially rendering and performance has improved with ongoing VTK releases. So, an update to a recent VTK Version (at least 7.1 - 7.0 has some bugs...) would be awesome. As a sidenote, IVtkTools_ShapeObject inherits from vtkDataObject but uses the vtkTypeMacro with vtkObject, this is incorrect. Either use: class IVtkTools_EXPORT IVtkTools_ShapeObject : public vtkDataObject vtkTypeMacro (IVtkTools_ShapeObject, vtkDataObject) or: class IVtkTools_EXPORT IVtkTools_ShapeObject : public vtkObject vtkBaseTypeMacro (IVtkTools_ShapeObject, vtkObject) | ||||||||
Additional information and documentation updates | When updating to VTK 7.1 keep in mind that the method "InsertNextTupleValue" will be deprectated. Use "InsertNextTypedTuple" instead. (IVtkVTK_ShapeData). | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|
(0063994) san (developer) 2017-02-25 21:29 |
Hello jengsw, Once you are interested in VTK 7.1 compatibility, can you prepare the OCCT patch? Contributing to an open-source product is always appreciated. |
(0064016) jensgw (reporter) 2017-02-27 19:41 |
Please find attached the patch with my modifcations to use VTK-7.1 with OCCT-7.1. This works only for the VTK OpenGL1 Rendering Backend - see 0028208 for the issue with the OpenGL2 Redering backend. |
(0082191) git (administrator) 2019-02-15 11:31 |
Branch CR28488 has been created by kgv. SHA-1: f3d9fe536c0f820dbac9e5f3d80c2790858ae2dd Detailed log of new commits: Author: kgv Date: Fri Feb 15 11:27:15 2019 +0300 0028488: VIS - fix compilation with VTK 8.2 Occurrences of removed method vtkDataArray::InsertNextTupleValue() have been replaced by InsertNextTypedTuple(). Fixed misprint in vtkTypeMacro usage for class IVtkTools_ShapeObject. Patch 0030452 (SelectMgr_ViewerSelector::Deactivate() raises exception when called twice) has been propagated to IVtkOCC_ViewerSelector. |
(0082192) git (administrator) 2019-02-15 11:50 |
Branch CR28488 has been updated forcibly by kgv. SHA-1: 866557227e0f2c993d2c65b70dad136d246d1b37 |
(0082194) kgv (developer) 2019-02-15 12:35 edited on: 2019-02-15 13:30 |
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR28488-master-KGV/ [^] |
(0082196) apn (administrator) 2019-02-15 14:49 |
Combination - OCCT branch : CR28488 master SHA - 866557227e0f2c993d2c65b70dad136d246d1b37 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 958a4e5e4b816adb6dba1a223ae557d1649e52b6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16503.939999999908 / 16545.53999999999 [-0.25%] Products Total CPU difference: 9076.380000000025 / 9061.810000000012 [+0.16%] Windows-64-VC14: OCCT Total CPU difference: 17918.59375 / 17918.46875 [+0.00%] Products Total CPU difference: 10451.5 / 10465.109375 [-0.13%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0082608) git (administrator) 2019-03-05 13:46 |
Branch CR28488 has been deleted by kgv. SHA-1: 866557227e0f2c993d2c65b70dad136d246d1b37 |
![]() |
|||
occt: master e607bd3e
Timestamp: 2019-02-15 08:27:15 Author: kgv Committer: apn [ Details ] [ Diff ] |
0028488: VIS - fix compilation with VTK 8.2 Occurrences of removed method vtkDataArray::InsertNextTupleValue() have been replaced by InsertNextTypedTuple(). Fixed misprint in vtkTypeMacro usage for class IVtkTools_ShapeObject. Patch 0030452 (SelectMgr_ViewerSelector::Deactivate() raises exception when called twice) has been propagated to IVtkOCC_ViewerSelector. |
||
mod - src/IVtkOCC/IVtkOCC_ViewerSelector.cxx | [ Diff ] [ File ] | ||
mod - src/IVtkTools/IVtkTools_ShapeObject.hxx | [ Diff ] [ File ] | ||
mod - src/IVtkVTK/IVtkVTK_ShapeData.cxx | [ Diff ] [ File ] | ||
mod - src/IVtkVTK/IVtkVTK_ShapeData.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2017-02-23 21:49 | jensgw | New Issue | |
2017-02-23 21:49 | jensgw | Assigned To | => san |
2017-02-25 21:06 | san | Relationship added | duplicate of 0028208 |
2017-02-25 21:29 | san | Note Added: 0063994 | |
2017-02-27 19:39 | jensgw | File Added: patchToOCCT.txt | |
2017-02-27 19:41 | jensgw | Note Added: 0064016 | |
2017-02-27 19:44 | jensgw | File Added: patchToOCCT_WithoutTypo.txt | |
2019-02-15 11:26 | kgv | Target Version | => 7.4.0 |
2019-02-15 11:26 | kgv | Summary | Update VTK Integration to latest VTK version (7.1) => VIS - fix compilation on VTK 8.2 |
2019-02-15 11:31 | kgv | Summary | VIS - fix compilation on VTK 8.2 => VIS - fix compilation with VTK 8.2 |
2019-02-15 11:31 | git | Note Added: 0082191 | |
2019-02-15 11:50 | git | Note Added: 0082192 | |
2019-02-15 12:35 | kgv | Note Added: 0082194 | |
2019-02-15 12:35 | kgv | Assigned To | san => bugmaster |
2019-02-15 12:35 | kgv | Status | new => resolved |
2019-02-15 12:35 | kgv | Status | resolved => reviewed |
2019-02-15 13:30 | kgv | Note Edited: 0082194 | View Revisions |
2019-02-15 14:49 | apn | Test case number | => Not needed |
2019-02-15 14:49 | apn | Note Added: 0082196 | |
2019-02-15 14:49 | apn | Status | reviewed => tested |
2019-02-16 11:48 | apn | Changeset attached | => occt master e607bd3e |
2019-02-16 11:48 | apn | Assigned To | bugmaster => apn |
2019-02-16 11:48 | apn | Status | tested => verified |
2019-02-16 11:48 | apn | Resolution | open => fixed |
2019-03-05 13:46 | git | Note Added: 0082608 |
Copyright © 2000 - 2021 MantisBT Team |